--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-			<a href="recipe-pages/pizza.html">BBQ Chicken Pizza</a>
+		<ul>
+			<li><a href="recipe-pages/pizza.html">BBQ Chicken Pizza</a></li>
+			<li><a href="recipe-pages/burger.html">Burgers</a></li>
+			<li><a href="recipe-pages/stirfry.html">Stir Fry</a></li>
+		</ul>
 	</body>
 </html>
