--- a/recipe-pages/burger.html
+++ b/recipe-pages/burger.html
@@ -3,42 +3,59 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- UTF-8 for accessibility -->
-		<title>BBQ Chicken Pizza</title>
+		<title>Good Ole' Burgers</title>
 	</head>
 	<body>
-		<h1>BBQ Chicken Pizza</h1>
+		<h1>Good Ole' Burgers</h1>
 			<a href="../index.html">Home</a>
-			<img src="../img/pizza.jpg" alt="Tasty BBQ Chicken Pizza">
+			<img src="../img/burger.jpg" alt="Mouth-watering Burger">
 			<!-- .. in front of the file location goes up directory -->
 			
 			<h2>Description</h2>
-				<p>There's no pizza quite like a barbecue chicken pizza, it's unique. As a bbq connoisseur, I
-can guarantee that a bbq chicken pizza made right, is quite a taste and sight.</p>
+			<p>“Here are the ingredients and the instructions to make the perfect burger! Although it may not be the healthiest, use medium ground beef for moistness and flavour. The leaner varieties produce burgers that are drier with a denser, tighter texture. Don't use previously frozen meat as juices are lost during defrosting. If making ahead, cover with plastic wrap and refrigerate for no more than a day. Enjoy!”</p>
 			
 			<h2>Ingredients</h2>
 				<ul>
-					<li>1/2 homemade/store pizza crust</li>
-					<li>1-2 teaspoons olive oil</li>
-					<li>1/3 cup + 2 tablespoons BBQ Sauce (the more the merrier)</li>
-					<li>1 cup chopped/shredded cooked chicken(about 1-8oz breast)</li>
-					<li>2/3 cup shredded mozzarella cheese</li>
-					<li>2/3 cup shredded smoked gouda cheese</li>
-					<li>1/2 cup small red onion, thinly sliced</li>
-					<li>fresh cilantro for topping (optional)</li>
+				<p>Burger</p>
+					<li>1 egg</li>
+					<li>1 teaspoon mustard (regular or Dijon)</li>
+					<li>1 teaspoon Worcestershire sauce</li>
+                               		<li>1 small onion, finely grated</li>
+					<li>1 clove garlic, minced </li>
+					<li>1/2 teaspoon salt</li>
+					<li>1/2 teaspoon pepper </li>
+					<li>1 lb medium ground beef</li>
+				<p>Seasoning</p>
+					<li>1 tablespoon creamy caesar salad dressing or 1 tablespoon Greek salad dressing</li>
+					<li>1 tablespoon chopped sun-dried tomato</li>
+					<li>1 tablespoon sour cream or 1 tablespoon yoghurt</li>
+					<li>1 tablespoon grated fresh lemon rind or 1 tablespoon lime rind</li>
+					<li>1 tablespoon ketchup or 1 tablespoon barbecue sauce</li>
+					<li>1 teaspoon lemon pepper</li>
+					<li>1 teaspoon curry powder</li>
+					<li>1 teaspoon dried thyme or 1 teaspoon dried rosemary</li>
+					<li>1 tablespoon fresh herb</li>
+					<li>2 teaspoons cajun seasoning</li>
+					<li>1 teaspoon sesame oil</li>
+					<li>1 teaspoon teriyaki sauce or 1 teaspoon hoisin sauce</li>
+					<li>1 fresh jalapenos or 1 pickled jalapeno pepper, chopped</li>	
 				</ul>
 
 			<h2>Steps</h2>
 				<ol>
-					<li>Prepare pizza dough through step 5, including preheating the oven to 475°F (246°C). Cover the shaped dough lightly with plastic wrap and allow it to rest as the oven preheats.</li>
-					<li>To prevent the pizza toppings from making your pizza crust soggy, brush the shaped dough lightly with olive oil. Using your fingers, push dents into the surface of the dough to prevent bubbling. Top the dough evenly with 1/3 cup BBQ sauce. Toss the cooked chicken with the remaining BBQ sauce, then scatter all around the pizza. Add the cheeses and red onion.</li>
-					<li>Bake pizza for 12-15 minutes. Remove from the oven and top with fresh cilantro, if desired. Slice hot pizza and serve immediately.</li>
-					<li>Cover leftover pizza tightly and store in the refrigerator. Reheat as you prefer. Baked pizza slices can be frozen up to 3 months. See pizza crust recipe for instructions on freezing the pizza dough.</li>
+					<li>Lightly oil grill and heat BBQ to medium.</li>
+					<li>Whisk egg in a bowl and add next 6 ingredients.</li>
+					<li>Add any of the seasonings that appeal to you.</li>
+					<li>Crumble in beef and using your hands or a fork, gently mix together.</li>
+					<li>Handle the meat as little as possible – the more you work it, the tougher it gets.</li>
+					<li>Gently shape (don’t firmly press) mixture into burgers about ¾ inch thick.</li>
+					<li>Using your thumb, make a shallow depression in the centre of each burger to prevent puffing up during cooking. </li>
+					<li>Place burgers on the grill, close lid and BBQ until NO LONGER PINK INSIDE, turning once, about 6 – 8 minutes per side.</li>
+					<li>An instant read thermometer should read 160F.</li>
+					<li>Don't abuse your burgers by pressing with a spatula, pricking with a fork or turning frequently as precious juices will be lost!</li>
+					<li>Tuck into a warm crusty bun& add your favourite toppings.</li>
 				</ol>
-
-			<h2>Notes</h2>
-				<ul>
-					<li>If not using an instant yeast, rise time may be up to 40% longer.</li>
-					<li>If you do not have smoked gouda, replace with the same amount of shredded mozzarella. You can leave off the onion and/or cilantro if desired.</li>
-				</ul>
-	</body>
+			<h2>Reference</h2>
+			<p><a href="https://www.food.com/recipe/the-perfect-burger-92021">Burger Recipe</a></p> 
+				</body>
 </html>
