--- a/recipe-pages/stirfry.html
+++ b/recipe-pages/stirfry.html
@@ -3,42 +3,41 @@
 	<head>
 		<meta charset="UTF-8">
 		<!-- UTF-8 for accessibility -->
-		<title>BBQ Chicken Pizza</title>
+		<title>Stir Fry</title>
 	</head>
 	<body>
-		<h1>BBQ Chicken Pizza</h1>
+		<h1>Chicken & Veggie Stir-Fry</h1>
 			<a href="../index.html">Home</a>
-			<img src="../img/pizza.jpg" alt="Tasty BBQ Chicken Pizza">
+			<img src="../img/stirfry.jpg" alt="Chicken Veggie Stir Fry">
 			<!-- .. in front of the file location goes up directory -->
 			
 			<h2>Description</h2>
-				<p>There's no pizza quite like a barbecue chicken pizza, it's unique. As a bbq connoisseur, I
-can guarantee that a bbq chicken pizza made right, is quite a taste and sight.</p>
-			
+			<p>Stir-Fry, a simple but effective dinner solution. Comprised of a medley of vegetables paired with sweet and savory chicken, the combination is quick and flavorful. This recipe makes 6 servings.</p>		
 			<h2>Ingredients</h2>
 				<ul>
-					<li>1/2 homemade/store pizza crust</li>
-					<li>1-2 teaspoons olive oil</li>
-					<li>1/3 cup + 2 tablespoons BBQ Sauce (the more the merrier)</li>
-					<li>1 cup chopped/shredded cooked chicken(about 1-8oz breast)</li>
-					<li>2/3 cup shredded mozzarella cheese</li>
-					<li>2/3 cup shredded smoked gouda cheese</li>
-					<li>1/2 cup small red onion, thinly sliced</li>
-					<li>fresh cilantro for topping (optional)</li>
+					<li>1lb chicken breast, cubed</li>
+					<li>Salt and Pepper</li>
+					<li>1lb broccoli florets</li>
+					<li>8oz sliced mushrooms</li>
+					<li>3 tablespoons oil, for frying</li>
+					<li>Sauce:</li>
+					<li>3 cloves minced garlic</li>
+					<li>1 tablespoon minced ginger</li>
+					<li>2 teaspoons sesame oil</li>
+					<li>1/3 cup reduced sodium soy sauce</li>
+					<li>1 tablespoon brown sugar</li>
+					<li>1 cup chicken broth</li>
+					<li>1/4 cup flour</li>
 				</ul>
 
 			<h2>Steps</h2>
 				<ol>
-					<li>Prepare pizza dough through step 5, including preheating the oven to 475°F (246°C). Cover the shaped dough lightly with plastic wrap and allow it to rest as the oven preheats.</li>
-					<li>To prevent the pizza toppings from making your pizza crust soggy, brush the shaped dough lightly with olive oil. Using your fingers, push dents into the surface of the dough to prevent bubbling. Top the dough evenly with 1/3 cup BBQ sauce. Toss the cooked chicken with the remaining BBQ sauce, then scatter all around the pizza. Add the cheeses and red onion.</li>
-					<li>Bake pizza for 12-15 minutes. Remove from the oven and top with fresh cilantro, if desired. Slice hot pizza and serve immediately.</li>
-					<li>Cover leftover pizza tightly and store in the refrigerator. Reheat as you prefer. Baked pizza slices can be frozen up to 3 months. See pizza crust recipe for instructions on freezing the pizza dough.</li>
-				</ol>
-
-			<h2>Notes</h2>
-				<ul>
-					<li>If not using an instant yeast, rise time may be up to 40% longer.</li>
-					<li>If you do not have smoked gouda, replace with the same amount of shredded mozzarella. You can leave off the onion and/or cilantro if desired.</li>
-				</ul>
+					<li>In a large pan on medium-high heat, add 1 tablespoon of oil. Once the oil is hot, add the chicken and season with salt and pepper. Saute until cooked through and browned, then remove cooked chicken from pan and set aside.</li>
+					<li>In the same pan, heat 1 tablespoon of oil and add mushrooms. When the mushrooms start to soften, add broccoli florets and stir-fry until the broccoli is tender. Remove cooked mushrooms and broccoli from the pan and set aside.</li>
+					<li>Add 1 tablespoon of oil to the pan and sauté garlic and ginger until fragrant. Add the remaining sauce ingredients and stir until smooth.</li>
+					<li>Return the chicken and vegetables to the saucy pan, stir until heated through.</li>
+					<li>Serve with hot rice or noodles.</li>
+					<li>Enjoy!</li>
+	
 	</body>
 </html>
